# Trading-Bot

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py  auth.py  binance.py  binance_client.py  client.py  endpoints.py
core/: config.py  exceptions.py  logger.py
models/: __init__.py  enums.py  order.py  response.py
services/: order_service.py
tests/: test_api_imports.py  test_auth.py  test_binance_client.py
validators/: __init__.py  order_validator.py
